--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,18 +1,24 @@
-log4j.rootLogger=INFO, stdout, stderr
-log4j.appender.stdout.Threshold = DEBUG
+log4j.rootLogger=INFO, stdout, stderr, debug
+log4j.appender.stdout.Threshold = INFO
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d [%t] %-5p %c: %m%n
+log4j.appender.stdout.layout.ConversionPattern=%m%n
 log4j.appender.stdout.Target=System.out
-#log4j.appender.stdout.filter.filter1=org.apache.log4j.varia.LevelRangeFilter
-#log4j.appender.stdout.filter.filter1.levelMax=INFO
-#log4j.appender.stdout.filter.filter1.levelMin=INFO
+log4j.appender.stdout.filter.filter1=org.apache.log4j.varia.LevelRangeFilter
+log4j.appender.stdout.filter.filter1.levelMax=INFO
+log4j.appender.stdout.filter.filter1.levelMin=INFO
 
 log4j.appender.stderr.Threshold = WARN
 log4j.appender.stderr=org.apache.log4j.ConsoleAppender
 log4j.appender.stderr.layout=org.apache.log4j.PatternLayout
-log4j.appender.stderr.layout.ConversionPattern=%d [%t] %-5p %c: %m%n
+log4j.appender.stderr.layout.ConversionPattern=%-5p %m%n
 log4j.appender.stderr.Target=System.err
 
-log4j.category.com.redhat=INFO
-log4j.category.com.redhat.lightblue.client=INFO
+log4j.appender.debug.Threshold = DEBUG
+log4j.appender.debug=org.apache.log4j.FileAppender
+log4j.appender.debug.layout=org.apache.log4j.PatternLayout
+log4j.appender.debug.layout.ConversionPattern=%d [%t] %-5p %c: %m%n
+log4j.appender.debug.File=/tmp/lightblue-metadata-manager-debug.log
+
+log4j.category.com.redhat=DEBUG
+log4j.category.com.redhat.lightblue.client=DEBUG
