--- a/pom.xml
+++ b/pom.xml
@@ -177,20 +177,59 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
+		    </plugin>
 
             <plugin>
-                <groupId>com.jakewharton.twirl</groupId>
-                <artifactId>twirl-maven-plugin</artifactId>
-                <version>1.0.5</version>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>rpm-maven-plugin</artifactId>
+                <version>2.1.5</version>
                 <executions>
                     <execution>
-                        <phase>generate-sources</phase>
                         <goals>
-                            <goal>compile</goal>
+                            <goal>rpm</goal>
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <copyright>2016, Red Hat, Inc. and/or its affiliates.</copyright>
+                    <name>${project.artifactId}</name>
+                    <group>Applications/File</group>
+                    <specfileName>${project.artifactId}.spec</specfileName>
+                    <defaultDirmode>755</defaultDirmode>
+                    <defaultGroupname>root</defaultGroupname>
+                    <defaultUsername>root</defaultUsername>
+                    <mappings>
+                        <mapping>
+                            <directory>/usr/share/${project.artifactId}</directory>
+                            <filemode>755</filemode>
+                        </mapping>
+                        <mapping>
+                            <directory>/usr/share/${project.artifactId}</directory>
+                            <sources>
+                                <source>
+                                    <location>target/${project.build.finalName}-jar-with-dependencies.jar</location>
+                                </source>
+                            </sources>
+                        </mapping>
+                        <mapping>
+                            <directory>/usr/share/${project.artifactId}</directory>
+                            <sources>
+                                <source>
+                                    <location>etc/lbmd</location>
+                                </source>
+                            </sources>
+                        </mapping>
+                        <mapping>
+                            <directory>/usr/bin</directory>
+                            <sources>
+                                <softlinkSource>
+                                    <destination>lbmd</destination>
+                                    <location>/usr/share/${project.artifactId}/lbmd</location>
+                                </softlinkSource>
+                            </sources>
+                        </mapping>
+                    </mappings>
+                </configuration>
             </plugin>
 
         </plugins>
