--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
 		<dependency>
 			<groupId>com.redhat.lightblue.client</groupId>
 			<artifactId>lightblue-client-http</artifactId>
-			<version>5.1.0</version>
+			<version>5.7.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.module</groupId>
