--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,11 @@
 			<artifactId>jackson-module-scala_2.11</artifactId>
 			<version>2.7.4</version>
 		</dependency>
+		<dependency>
+			<groupId>com.redhat.lightblue.migrator</groupId>
+			<artifactId>jiff</artifactId>
+			<version>2.50.0-SNAPSHOT</version>
+		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
