--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
 		<dependency>
 			<groupId>com.redhat.lightblue.migrator</groupId>
 			<artifactId>jiff</artifactId>
-			<version>2.50.0-SNAPSHOT</version>
+			<version>2.50.0</version>
 		</dependency>
 
 		<dependency>
