--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,7 @@
 			<groupId>org.scalactic</groupId>
 			<artifactId>scalactic_2.11</artifactId>
 			<version>2.2.6</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.scalatest</groupId>
@@ -68,6 +69,21 @@
 			<version>2.2.6</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-all</artifactId>
+		    <version>1.10.19</version>
+		    <scope>test</scope>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.scalamock/scalamock-scalatest-support_2.11 -->
+<!-- 		<dependency> -->
+<!-- 		    <groupId>org.scalamock</groupId> -->
+<!-- 		    <artifactId>scalamock-scalatest-support_2.11</artifactId> -->
+<!-- 		    <version>3.5.0</version> -->
+<!-- 		    <scope>test</scope> -->
+<!-- 		</dependency> -->
+
+
 	</dependencies>
 
 	<build>
